--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,13 @@ dependencies:
   flutter_svg: ^2.0.7
   get: ^4.7.2
   go_router: ^15.0.0
-  http: ^1.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+ 
+
   intl: ^0.18.1
   shimmer: ^3.0.0
+  flutter_bloc: ^9.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -80,3 +84,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+ 
