--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,14 @@ dependencies:
   go_router: ^15.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
- 
-
   intl: ^0.18.1
   shimmer: ^3.0.0
   flutter_bloc: ^9.0.0
+  dio: ^5.4.0
+  url_launcher: ^6.2.5
+  get_it: ^7.6.7
+  dartz: ^0.10.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
