--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   flutter_svg: ^2.0.7
   get: ^4.7.2
   go_router: ^15.0.0
-  hive: ^2.2.3
   hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
   intl: ^0.18.1
   shimmer: ^3.0.0
   flutter_bloc: ^9.0.0
@@ -48,9 +48,11 @@ dependencies:
   equatable: ^2.0.5
 
 dev_dependencies:
+  build_runner: ^2.4.15
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
